--- a/config.toml
+++ b/config.toml
@@ -38,10 +38,10 @@ copyright = '&copy; Copyright {year}, Diogo Mesquita'
   recent_posts = 5                           # Max amount of recent posts to show
   mainSections = ['about', 'projects', 'blog']   # Main sections to include in recent posts
   [params.style]                             # CSS style overrides
-    backgroundColor = '#151515'
+    backgroundColor = '#131418'
     homeImageBorderColor = '#ffffff'
-    fontFamilyBase = 'Helvetica Neue'        # First-choice font
-    fontColor = '#6c757d'
+    fontFamilyBase = 'Roboto'        # First-choice font
+    fontColor = '#babdc4'
   [[params.social]]
     fa_icon = 'fab fa-github fa-1x'          # Font Awesome icon class
     href = 'https://github.com/iamdlm'      # Link to associate with icon (http://, https://, mailto:)
